tests/snapshots/code_text_fallback_param__code_text_fallback_sample_sh_detailed_json.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 113
expression: out_json
---
[
  [ /* 1 more items */ ],
  /* 6 more items */
  [ /* 1 more items */ ]
  /* 13 more items */
]
