tests/snapshots/code_text_fallback_param__code_text_fallback_sample_sh_stdout.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 142
expression: out_default
---
 1: #!/usr/bin/env bash
 2: 
 3: greet() {
 4:   local name="$1"
 5:   echo "Hello, ${name}"
31: 
32: main "$@"
33:
