tests/snapshots/code_text_fallback_param__code_text_fallback_sample_sh_strict.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
#!/usr/bin/env bash

greet() {
  local name="$1"
compute() {
}

main() {
  greet "world"


main "$@"
