tests/snapshots/code_text_fallback_param__code_text_fallback_sample_ts.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 77
expression: out
---
function greet(name: string) {
console.log(`Hello, ${name}`);
…

function main(): void {
greet("world");
…
…

…
