tests/snapshots/code_text_fallback_param__code_text_fallback_sample_ts_default.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
function greet(name: string) {
  console.log(`Hello, ${name}`);
…
function main(): void {
  greet("world");
…

…
