tests/snapshots/code_text_fallback_param__code_text_fallback_sample_ts_default_combined.snap
---
source: tests/code_text_fallback_param.rs
expression: snap
---
STDOUT:
1: function greet(name: string) {
2:   console.log(`Hello, ${name}`);
…
17: function main(): void {
…
29: 
…

DEBUG (normalized):
{
  "budgets_effective": {
    "bytes": 120,
    "chars": null,
    "lines": null
  },
  "counts": {
    "included": 0,
    "omitted_children": 10,
    "total_nodes": 0
  },
  "output_stats": {
    "bytes": 115,
    "chars": 0,
    "lines": 8
  },
  "renderer": {
    "array_sampler": "default",
    "prefer_tail_arrays": false,
    "style": "default",
    "template": "text"
  },
  "root": {
    "children": [
      {
        "children": [
          {
            "atomic_token": "function greet(name: string) {",
            "id": 0,
            "index_in_parent_array": 0,
            "kind": "string",
            "metrics": {}
          },
          {
            "children": [
              {
                "atomic_token": "  console.log(`Hello, ${name}`);",
                "id": 0,
                "index_in_parent_array": 1,
                "kind": "string",
                "metrics": {}
              }
            ],
            "id": 0,
            "index_in_parent_array": 1,
            "kind": "array",
            "metrics": {
              "array_len": 1
            },
            "omitted_before": 1
          }
        ],
        "id": 0,
        "index_in_parent_array": 0,
        "kind": "array",
        "metrics": {
          "array_len": 2
        }
      },
      {
        "children": [
          {
            "atomic_token": "function main(): void {",
            "id": 0,
            "index_in_parent_array": 16,
            "kind": "string",
            "metrics": {}
          },
          {
            "id": 0,
            "index_in_parent_array": 17,
            "kind": "array",
            "metrics": {
              "array_len": 1
            }
          }
        ],
        "id": 0,
        "index_in_parent_array": 6,
        "kind": "array",
        "metrics": {
          "array_len": 2
        },
        "omitted_before": 16
      },
      {
        "children": [
          {
            "atomic_token": "",
            "id": 0,
            "index_in_parent_array": 28,
            "kind": "string",
            "metrics": {}
          }
        ],
        "id": 0,
        "index_in_parent_array": 12,
        "kind": "array",
        "metrics": {
          "array_len": 1
        },
        "omitted_before": 28
      }
    ],
    "gaps": [
      {
        "before_child_index": 1,
        "omitted_count": 5
      },
      {
        "before_child_index": 2,
        "omitted_count": 5
      }
    ],
    "id": 0,
    "kind": "array",
    "metrics": {
      "array_len": 13
    }
  },
  "selection": {
    "top_k": 10
  },
  "template": "text"
}
