tests/snapshots/code_text_fallback_param__code_text_fallback_sample_ts_default_json.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 113
expression: out_json
---
[
  [
    function greet(name: string) {,
    [ … ]
  ],
  …
  [ … ],
  …
  [ … ]
  …
]
