tests/snapshots/code_text_fallback_param__code_text_fallback_sample_ts_detailed.snap
---
source: tests/code_text_fallback_param.rs
assertion_line: 80
expression: out
---
function greet(name: string) {
… 1 more lines …
… 5 more lines …
… 2 more lines …
… 11 more lines …
